feat: add tox integration-test environment for Docker testing
- Add new tox environment 'integration-test' for Docker-based testing
- Enable running both CLI and pre-commit integration tests via tox
- Add integration test to pre-commit config as manual stage
- Update README.rst with integration test documentation
- Allows running 'tox -e integration-test' alongside other environments

This provides:
- Consistent testing interface through tox
- Docker-based validation of CLI and pre-commit functionality
- Easy integration with existing development workflow
- Optional manual execution to avoid requiring Docker for all workflows

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,3 +36,14 @@ repos:
       args: [ --fix ]
     # Run the formatter.
     - id: ruff-format
+
+- repo: local
+  hooks:
+  - id: tox-integration-test
+    name: Integration Test (Docker)
+    description: Run Docker-based integration tests
+    entry: tox -e integration-test
+    language: system
+    pass_filenames: false
+    stages: [manual]  # Only run manually or when specifically requested
+    verbose: true
