--- a/tox.ini
+++ b/tox.ini
@@ -140,3 +140,24 @@ deps =
 commands =
     python -m twine check dist/*
     python -m twine upload {posargs:--repository {env:TWINE_REPOSITORY:testpypi}} dist/*
+
+[testenv:integration-test]
+description =
+    Run Docker-based integration tests to validate CLI and pre-commit functionality
+    Requires Docker to be installed and running
+skip_install = True
+changedir = {toxinidir}
+allowlist_externals =
+    docker
+    bash
+    sh
+passenv =
+    DOCKER_*
+    BUILDKIT_*
+commands =
+    # Build the Docker image for integration testing
+    docker build -f integration_test/Dockerfile -t ats-linter-integration .
+    # Test direct CLI usage
+    docker run --rm -v {toxinidir}/integration_test/test_repo:/test_repo ats-linter-integration
+    # Test pre-commit hook integration
+    docker run --rm -v {toxinidir}/integration_test/test_repo:/test_repo ats-linter-integration test-precommit
