fix: enable always_run for manual integration test hook
- Add always_run: true to ensure integration test runs when manually triggered
- This allows proper testing via 'pre-commit run tox-integration-test --hook-stage manual'

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,5 +45,6 @@ repos:
     entry: tox -e integration-test
     language: system
     pass_filenames: false
+    always_run: true
     stages: [manual]  # Only run manually or when specifically requested
     verbose: true
